--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -19,6 +19,8 @@
   
   html {
     font-size: 16px;
+    -webkit-text-size-adjust: 100%;
+    text-size-adjust: 100%;
   }
   
   * {
@@ -31,6 +33,9 @@
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    text-size-adjust: 100%;
+    font-feature-settings: "kern" 1;
+    text-rendering: optimizeLegibility;
   }
 }
 
